3과제/코드/ingress.yaml
cat > ingress.yaml <<'EOF'
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: apdev
  namespace: apdev
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP":80}]'
spec:
  ingressClassName: alb

  rules:
  - http:

      paths:

      - path: /v1/user
        pathType: Prefix
        backend:
          service:
            name: user
            port:
              number: 8080

      - path: /v1/product
        pathType: Prefix
        backend:
          service:
            name: product
            port:
              number: 8080

      - path: /v1/stress
        pathType: Prefix
        backend:
          service:
            name: stress
            port:
              number: 8080

      - path: /healthcheck
        pathType: Prefix
        backend:
          service:
            name: user
            port:
              number: 8080
EOF

kubectl apply -f ingress.yaml
